# my-rust-journey

./: .gitignore  README.md
algorithms/k_means/: Cargo.toml
algorithms/k_means/src/: main.rs
alura/introducao/: 00_variaveis.rs  01_constantes.rs  02_strings.rs  03_escopo.rs  04_match.rs  05_funcoes.rs  06_ownership.rs  07_ownership  07_ownership.rs  08_ownership  08_ownership.rs  09_ownership  09_ownership.rs  10_pattern_matching  10_pattern_matching.rs  11_erros  11_erros.rs  constantes  escopo  funcoes  main  match  ownership
alura/tipos/parte_1/: Cargo.toml
backend/01-essencial-backend/: Cargo.toml  docker-compose.yml
backend/01-essencial-backend/migrations/: 00000_23122024_add_tabela_produtos.sql
backend/01-essencial-backend/src/: lib.rs  main.rs
backend/01-essencial-backend/src/configuration/: migrations.rs
backend/01-essencial-backend/src/produtos/: controller.rs  mod.rs  persistence.rs  produto.rs  service.rs
backend/01-essencial-backend/src/tests/: mod.rs  produtos_test.rs
backend/02_game-crud/: Cargo.toml  docker-compose.yml
backend/02_game-crud/src/: config.rs  main.rs
backend/02_game-crud/src/game/: mod.rs
backend/rocket-hello-world/: Cargo.toml
bublesort/: Cargo.toml
bublesort/src/: main.rs
graphs/count_triangles/: Cargo.toml  README.md
graphs/graphs_topicos_em_computacao_I/: Cargo.toml
leetcode/: Cargo.toml
leetcode/src/: leet802_find_enventual_safe_states.rs  main.rs
math/src/: main.rs
poo/r00-poo-composicao/: Cargo.toml
poo/r01-poo-traits/: Cargo.toml
poo/r02-poo-sistema-bancario/: Cargo.toml
(+56 files in other folders)
