[package]
name = "essencial-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenvy = "0.15.7"
rocket = "0.5.1"
rocket_sync_db_pools = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sha3 = "0.10.8"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-postgres = "0.7.12"
uuid = "1.11.0"
